sale order enhancement
code changes for sale order module

--- a/src/com/enuminfo/optimized/resources/i18n/common.properties
+++ b/src/com/enuminfo/optimized/resources/i18n/common.properties
@@ -4,8 +4,7 @@
 
 # app view
 AppView.File=File
-AppView.RefActionsBand=Referential Actions
-AppView.SalActionsBand=Sale Actions
+AppView.ActionsBand=Actions
 AppView.AppExitBand=App
 AppView.ViewBand=View
 AppView.Window=Window
