--- a/src/com/enuminfo/optimized/resources/i18n/optimized.properties
+++ b/src/com/enuminfo/optimized/resources/i18n/optimized.properties
@@ -102,15 +102,23 @@ SaleOrder.Page.OrderNumber=Order Number
 SaleOrder.Page.Customer=Customer Name
 SaleOrder.Page.OrderAmount=Order Amount
 
+SaleOrder.Page.Product=Product
+SaleOrder.Page.Quantity=Quantity
+SaleOrder.Page.UnitPrice=Unit Price
+SaleOrder.Page.ActualPrice=Actual Price
+
 # sale order form view
 SaleOrder.Form.NewTitle=Add new sales order
 SaleOrder.Form.EditTitle=Edit sales order
+SaleOrder.Form.SalePage.Title=Sale Detail
 SaleOrder.Form.OrderDate=Order Date
 SaleOrder.Form.OrderNumber=Order No *
 SaleOrder.Form.Customer=Customer *
+SaleOrder.Form.OrderPage.Title=Order Detail
+SaleOrder.Form.Category=Category *
+SaleOrder.Form.Product=Product *
+SaleOrder.Form.Quantity=Quantity *
+SaleOrder.Form.UnitPrice=Price *
 SaleOrder.Form.AddLine=Add Line
 
-SaleOrder.Page.Product=Product
-SaleOrder.Page.Quantity=Quantity
-SaleOrder.Page.UnitPrice=Actual Price
-SaleOrder.Page.ActualPrice=Calculated Price
+
