optimized desktop code changes with specific reference screens

--- a/src/com/enuminfo/optimized/frontend/resources/i18n/common.properties
+++ b/src/com/enuminfo/optimized/frontend/resources/i18n/common.properties
@@ -13,6 +13,7 @@ AppView.Help=Help
 AppView.HelpBand=Help
 AppView.Help.About=About
 AppView.StatusBar.User=User
+AppView.ReferencesBand=References
 
 # abstract page view
 AbstractPageView.SearchText=Search
