--- a/src/com/enuminfo/optimized/frontend/resources/i18n/optimized.properties
+++ b/src/com/enuminfo/optimized/frontend/resources/i18n/optimized.properties
@@ -3,7 +3,7 @@
 #
 
 # app 
-App.Title=Optimized Java Swing Application | Hyderabad
+App.Title=Optimized Java Desktop Application | Bengaluru
 App.Version=Version 0.0.1-SNAPSHOT
 App.Copyright=\u00a9 Copyright 2018 ENUMInfo Team, 
 App.Details=Project details and source code: 
@@ -18,12 +18,15 @@ Action.Products=Products
 Action.Locations=Locations
 Action.Orders=Orders
 Action.Sales=Sales
+Action.Banks=Banks
 
 # dashboard page view
 Dashboard.Home.Dashboard=Dashboard
 Dashboard.Home.LinkCustomers=View customers
 Dashboard.Home.LinkProducts=View products
 Dashboard.Home.LinkLocations=View locations
+Dashboard.Home.LinkCountries=View countries
+Dashboard.Home.LinkBanks=View banks
 
 # product page view
 Product.Page.Title=Products
@@ -40,12 +43,27 @@ Product.Form.NameError=The product name field is required!
 Product.Form.CodeError=The product code field is required!
 Product.Form.CategoryError=The product category field is required!
 
+# country page view
+Country.Page.Title=Countries
+Country.Page.Name=Name
+Country.Page.Isd=ISD
+
+# bank page view
+Bank.Page.Title=Banks
+Bank.Page.Name=Bank
+Bank.Page.Ifsc=IFSC
+Bank.Page.Micr=MICR
+Bank.Page.Branch=Branch
+Bank.Page.Address=Address
+Bank.Page.Contact=Phone
+
 # location page view
 Location.Page.Title=Locations
 Location.Page.Pin=Pin
 Location.Page.Name=Location
 Location.Page.City=City
 Location.Page.State=State
+Location.Page.Country=Country
 
 # location form view
 Location.Form.NewTitle=Add new location
