code fixes for country/location/bank from file to db

--- a/src/com/enuminfo/optimized/resources/i18n/optimized.properties
+++ b/src/com/enuminfo/optimized/resources/i18n/optimized.properties
@@ -56,6 +56,7 @@ Bank.Page.Micr=MICR
 Bank.Page.Branch=Branch
 Bank.Page.Address=Address
 Bank.Page.Contact=Phone
+Bank.Page.Email=Email
 
 # location page view
 Location.Page.Title=Locations
